@@ -36,6 +36,7 @@ ZMK.manPages = \
 	zmk.Program.5 \
 	zmk.Script.5 \
 	zmk.Silent.5 \
+	zmk.Symlink.5 \
 	zmk.Toolchain.5
 
 # Use git to augment version.
